--- a/style.css
+++ b/style.css
@@ -726,7 +726,7 @@ iframe {
   }
 
   .nav-links ul li a {
-    margin-left: 1.7rem;
+    margin-left: 1.8rem;
   }
   .row {
     flex-direction: column;
